# ChangeLog for app-doc/doxygen
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.133 2007/11/21 06:17:24 nerdboy Exp $

*doxygen-1.5.4 (21 Nov 2007)

  21 Nov 2007; Steve Arnold <nerdboy@gentoo.org> +doxygen-1.5.4.ebuild:
  Updated to new version, closes bug 198954.

  21 Sep 2007; Roy Marples <uberlord@gentoo.org> doxygen-1.5.3.ebuild:
  Link to libiconv for FreeBSD.

*doxygen-1.5.3 (02 Sep 2007)

  02 Sep 2007; Steve Arnold <nerdboy@gentoo.org> +files/doxywizard.png,
  +doxygen-1.5.3.ebuild:
  Updated to latest release, added desktop entry and nodot use flag
  (addresses bugs 188124 and 181890).  USE=nodot will remove both the
  graphviz dependency and the capability to generate dot-based graphs.
  If someone has a better icon for doxywizard, please post a bug :)

  12 Jul 2007; Fabian Groffen <grobian@gentoo.org> doxygen-1.4.2.ebuild,
  doxygen-1.4.3-r1.ebuild, doxygen-1.4.4.ebuild, doxygen-1.4.5.ebuild,
  doxygen-1.4.6.ebuild, doxygen-1.4.7.ebuild, doxygen-1.5.1.ebuild,
  doxygen-1.5.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Jul 2007; Lars Weiler <pylon@gentoo.org> doxygen-1.5.2.ebuild:
  Stable on ppc; bug #184044.

  05 Jul 2007; Christoph Mende <angelos@gentoo.org> doxygen-1.5.2.ebuild:
  Stable on amd64 wrt bug #184044

  05 Jul 2007; Jeroen Roovers <jer@gentoo.org> doxygen-1.5.2.ebuild:
  Stable for HPPA (bug #184044).

  05 Jul 2007; Markus Rothe <corsair@gentoo.org> doxygen-1.5.2.ebuild:
  Stable on ppc64; bug #184044

  04 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> doxygen-1.5.2.ebuild:
  Stable on sparc wrt #184044

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> doxygen-1.5.2.ebuild:
  alpha/ia64/x86 stable wrt #184044

  23 Jun 2007; Joshua Kinard <kumba@gentoo.org> doxygen-1.4.7.ebuild:
  Stable on mips.

*doxygen-1.5.2 (24 Apr 2007)

  24 Apr 2007; Steve Arnold <nerdboy@gentoo.org> +doxygen-1.5.2.ebuild: