@@ -9,6 +9,6 @@ DIST doxygen-1.5.3.src.tar.gz 3617278 RMD160 f5e83a0feae0a53ae5c5733305f86cfa893
 DIST doxygen-1.5.4.src.tar.gz 3762535 RMD160 263e2287da4fbe91a429dc53fe3569b150c76fdf SHA1 1a815f7de6b412f7852d57dec9eb50f7c4b03268 SHA256 12e6a2166b8c78a991d4ceef1dd9042117b24b76e20ccfdfdfc30bc4a7e31df2
 EBUILD doxygen-1.5.2.ebuild 3987 RMD160 4f4db10c837fe875b156d06bc44a858312b087b4 SHA1 f09832bded1804918aec703dac1d7dae39407dfd SHA256 cf47107f305d92c837c7fba4eb09d2b0accd12c62c186bfc0917068124d6bdfa
 EBUILD doxygen-1.5.3.ebuild 4952 RMD160 9871a3bbbeb5f2f9bea265aff63a1b471817be91 SHA1 41c32dd494710d730db2d70cafb8f4abc076fa8a SHA256 6e5a063df6d1a8c1637abfc73856237fd6fed68154d6b0e98f253402c9939419
-EBUILD doxygen-1.5.4.ebuild 4799 RMD160 74c02cd70e62799da9d81ac5268b128488d192bf SHA1 d2039e5213386a8168aa276fa7e38c4a35401673 SHA256 d90bbd79f6b4c4b9fc5b9f3a865bff7354fb340abbd9785341c72e14a4d6dacb
-MISC ChangeLog 21746 RMD160 189d3c0d1bf53a0cff1c8d15c00b1d79ad75dfab SHA1 317d1939231c4102dbb27d8b1c7ecf1b4ffd0444 SHA256 bf9e13d4dd3eea2f9707682cb707fa783171a3317afa1d3bfd3ec00a2f3e8dea
+EBUILD doxygen-1.5.4.ebuild 4952 RMD160 7d1e52c7f0aa6af3096d68aef16206bf38480f40 SHA1 697b41315211f0e3aff41a3b1555b33a75b21a9f SHA256 0501cb9ec0081e837f2efb89c10b13749a575662b715e3739b29a90d27a5c8cc
+MISC ChangeLog 21889 RMD160 2be7212210683902074450207c17e59ae5d0c461 SHA1 217157ee80c3869b5f34b258b0ee6d7cf40def7d SHA256 58edf73a9a5a17ab533190c2c89f1fd359e174b10a1e45225dd8e22989470ae6
 MISC metadata.xml 649 RMD160 2c8cc604548cc64104c075ff64d33190efdce45d SHA1 bfc826f792595110c799a2658d07293b4ab3e0fd SHA256 57a845bfcc6988eabb61ab1da130aeb637be936c93d47e20e53a67676f57c26b
